--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+html {
+  margin:0;
+  font-family:
+}
+
+header {
+  height: 414px;
+  width: 736px;
+  margin: auto;
+}
 .mod-link {
   background: magenta;
 }
