--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,8 @@ html {
 }
 
 .counter-container {
-  background-color: white;
-  border-bottom: 1px solid black;
+  background-color: #73A393;
+  border-bottom: 1px solid #D2C79A;
   color: black;
   display: flex;
   flex: 1;
@@ -24,7 +24,7 @@ html {
 }
 
 .counter-container:hover {
-  border: 2px solid aqua;
+  border: 2px solid #2F4C4A;
 }
 
 #clear-all-read {
@@ -35,36 +35,46 @@ html {
 }
 
 .input-container {
-  background-color: white;
-  border-bottom: 1px solid grey;
-  border-right: 1px solid grey;
-  display:flex;
+  background-color: #73A393;
+  border-bottom: 1px solid #D2C79A;
+  border-right: 1px solid #D2C79A;
   flex: 2;
-  justify-content: center;
-  align-items: center;
+  min-width: 450px;
 }
 
 .input-container:hover {
-  border-bottom: 2px solid aqua;
+  border-bottom: 2px solid #2F4C4A;
 }
 
 .input-container h1 {
-  color: black;
-  size: 40px;
-}
-.input-fields {
-  color: black;
-  display:flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
+  margin-bottom: 15px;
 }
 
-.button-container-inputs {
-  background-color: green;
-  height: 50px;
+.input-fields {
+  color: black;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.error {
+  flex-wrap: wrap;
+  color: red;
+  font-size: .8em;
+}
+
+.input {
+  padding: 5px;
+  margin: 5px;
   width: 150px;
+}
+
+body {
+  background: url('../images/background.jpeg') no-repeat;
+  background-size: cover;
 }
 
 .link-container {
@@ -82,12 +92,11 @@ html {
   flex-direction: row;
   flex-wrap: wrap;
   margin-top: 200px;
-
 }
 
 .mod-link{
-  background-color: dimgrey;
-  border: 2px solid aqua;
+  background-color: #2F4C4A;
+  border: 2px solid #DFDEC0;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -96,16 +105,9 @@ html {
   margin: 20px;
   width: 200px;
 }
-.button-container {
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  margin-bottom: 15px;
-}
 
 .mod-link:hover {
-  background: grey;
+  background: #DFDEC0;
 }
 
 .mod-link a {
@@ -115,20 +117,23 @@ html {
 }
 
 .mod-link a:hover {
-  color: aqua;
+  color: #2F4C4A;
   display: flex;
   transition-property: color;
   transition-duration: .3s;
 }
 
 .read {
-  background: grey;
-  opacity: .6;
+  opacity: .8;
 }
 
 .button-container {
+  align-items: center;
   display: flex;
   justify-content: center;
+  height: 100%;
+  width: 100%;
+  margin-bottom: 15px;
   margin-top: 50%;
 }
 
@@ -137,12 +142,21 @@ html {
   font-size: 3em;
 }
 
-@media (max-width: 575px) {
+@media (max-width: 625px) {
   .input-container-all {
     display: block;
     z-index: 10;
+    min-width: 450px;
   }
+
+  .input-container {
+    height: 200px;
+    width: 100%;
+    flex: 1;
+  }
+
   .counter-container {
     min-height: 50px;
+    flex: 1;
   }
 }
